--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "1.3.2",
   "description": "Examine a package's dependency graph before you install it",
   "main": "./lib/index.js",
+  "engines": {
+    "node": ">= 12.22"
+  },
   "bin": {
     "npm-remote-ls": "./bin/npm-remote-ls.js"
   },
   "scripts": {
-    "test": "standard && tap --coverage test",
+    "lint": "eslint bin lib test",
+    "check": "tap test",
+    "test": "eslint bin lib test && c8 npx tap test",
     "version": "standard-version"
   },
   "repository": {
@@ -27,23 +32,25 @@
   },
   "homepage": "https://github.com/npm/npm-remote-ls",
   "devDependencies": {
-    "chai": "^3.5.0",
-    "nock": "^8.0.0",
-    "standard": "^6.0.8",
-    "standard-version": "^2.1.2",
-    "tap": "^5.7.1"
+    "c8": "^7.12.0",
+    "chai": "^4.3.6",
+    "nock": "^13.2.9",
+    "rc": "^1.2.8",
+    "standard": "^17.0.0",
+    "standard-version": "^9.5.0",
+    "tap": "^12.7.0"
   },
   "dependencies": {
-    "async": "^2.0.0-rc.3",
+    "async": "^2.6.4",
     "cacheman": "^2.2.1",
     "char-spinner": "^1.0.1",
-    "lodash": "^4.10.0",
-    "npm-package-arg": "^4.2.0",
-    "once": "^1.3.3",
-    "registry-url": "^3.0.3",
+    "lodash": "^4.17.21",
+    "npm-package-arg": "^9.1.0",
+    "once": "^1.4.0",
+    "registry-url": "^5.1.0",
     "request": "^2.37.0",
-    "semver": "^5.1.0",
-    "treeify": "^1.0.1",
-    "yargs": "^4.6.0"
+    "semver": "^7.3.7",
+    "treeify": "^1.1.0",
+    "yargs": "^17.5.1"
   }
 }
