--- a/package.json
+++ b/package.json
@@ -2,18 +2,29 @@
   "name": "npm-remote-ls",
   "version": "1.3.2",
   "description": "Examine a package's dependency graph before you install it",
-  "main": "./lib/index.js",
   "engines": {
     "node": ">= 12.22"
+  },
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "types": "lib/index.d.ts",
+  "exports": {
+    "require": "./dist/index.cjs",
+    "import": "./dist/index.mjs"
   },
   "bin": {
     "npm-remote-ls": "./bin/npm-remote-ls.js"
   },
+  "files": [
+    "bin",
+    "dist",
+    "lib/index.d.ts"
+  ],
   "scripts": {
-    "lint": "eslint bin lib test",
-    "check": "tap test",
-    "test": "eslint bin lib test && c8 npx tap test",
-    "version": "standard-version"
+    "prepare": "rollup -c",
+    "lint": "denolint && tsc --noEmit test/exports/types.ts",
+    "check": "teru-esm test/exports/*.mjs && tap test/*.js",
+    "test": "denolint && tsc --noEmit test/exports/types.ts && teru-esm test/exports/*.mjs && c8 npx tap test/*.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +34,8 @@
     "npm",
     "ls",
     "remote",
-    "dependency"
+    "dependency",
+    "dependencies"
   ],
   "author": "Ben Coe <ben@npmjs.com>",
   "license": "ISC",
@@ -32,13 +44,19 @@
   },
   "homepage": "https://github.com/npm/npm-remote-ls",
   "devDependencies": {
+    "@node-rs/deno-lint": "^1.14.0",
     "c8": "^7.12.0",
     "chai": "^4.3.6",
     "nock": "^13.2.9",
+    "npm-remote-ls": "link:",
     "rc": "^1.2.8",
-    "standard": "^17.0.0",
-    "standard-version": "^9.5.0",
-    "tap": "^12.7.0"
+    "rollup": "^2.79.0",
+    "rollup-plugin-cleanup": "^3.2.1",
+    "tap": "^12.7.0",
+    "tehanu": "^1.0.1",
+    "tehanu-repo-coco": "^1.0.0",
+    "tehanu-teru": "^1.0.0",
+    "typescript": "^4.8.2"
   },
   "dependencies": {
     "async": "^2.6.4",
