--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "npm-remote-ls",
+  "name": "@prantlf/npm-remote-ls",
   "version": "1.3.2",
   "description": "Examine a package's dependency graph before you install it",
   "engines": {
@@ -28,7 +28,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/npm/npm-remote-ls.git"
+    "url": "git://github.com/prantlf/npm-remote-ls.git"
   },
   "keywords": [
     "npm",
@@ -38,17 +38,22 @@
     "dependencies"
   ],
   "author": "Ben Coe <ben@npmjs.com>",
+  "contributors": [
+    "Ferdinand Prantl <prantlf@gmail.com>"
+  ],
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/npm/npm-remote-ls/issues"
+    "url": "https://github.com/prantlf/npm-remote-ls/issues"
   },
-  "homepage": "https://github.com/npm/npm-remote-ls",
+  "homepage": "https://github.com/prantlf/npm-remote-ls",
   "devDependencies": {
     "@node-rs/deno-lint": "^1.14.0",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/git": "^10.0.1",
     "c8": "^7.12.0",
     "chai": "^4.3.6",
     "nock": "^13.2.9",
-    "npm-remote-ls": "link:",
+    "@prantlf/npm-remote-ls": "link:",
     "rc": "^1.2.8",
     "rollup": "^2.79.0",
     "rollup-plugin-cleanup": "^3.2.1",
@@ -81,5 +86,23 @@
     "lines": 100,
     "functions": 100,
     "statements": 100
+  },
+  "release": {
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/changelog",
+      "@semantic-release/npm",
+      [
+        "@semantic-release/github",
+        {
+          "failComment": false
+        }
+      ],
+      "@semantic-release/git"
+    ]
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
