feat: Let the errors from package loading be inspected
Return an array of errors as a second argument of the callback.
Promise an object with packages and errors.

BREAKING CHANGE: The promised content is not the same as the first callback argument. It is an object with properties `packages` and `errors`. These properties correspond with the first and second arguments of the callback.

--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
   ],
   "scripts": {
     "prepare": "rollup -c",
-    "lint": "denolint && tsc --noEmit test/exports/types.ts",
+    "lint": "denolint && tsc --noEmit test/exports/types-test.ts",
     "check": "teru-esm test/exports/*.mjs && tap test/*.js",
-    "test": "denolint && tsc --noEmit test/exports/types.ts && teru-esm test/exports/*.mjs && c8 npx tap test/*.js"
+    "test": "denolint && tsc --noEmit test/exports/types-test.ts && teru-esm test/exports/*.mjs && c8 npx tap test/*.js"
   },
   "repository": {
     "type": "git",
