--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
   ],
   "scripts": {
     "prepare": "rollup -c",
-    "lint": "denolint && tsc --noEmit test/exports/types-test.ts",
-    "check": "teru-esm test/exports/*.mjs && tap test/*.js",
-    "test": "denolint && tsc --noEmit test/exports/types-test.ts && teru-esm test/exports/*.mjs && c8 npx tap test/*.js"
+    "lint": "denolint && tsc --noEmit test/types.ts",
+    "check": "teru-esm test/*.mjs && teru 'test/**/*.js'",
+    "test": "denolint && tsc --noEmit test/types.ts && teru-esm test/*.mjs && c8 teru 'test/**/*.js'"
   },
   "repository": {
     "type": "git",
@@ -51,13 +51,11 @@
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
     "c8": "^7.12.0",
-    "chai": "^4.3.6",
     "nock": "^13.2.9",
     "@prantlf/npm-remote-ls": "link:",
     "rc": "^1.2.8",
     "rollup": "^2.79.0",
     "rollup-plugin-cleanup": "^3.2.1",
-    "tap": "^12.7.0",
     "tehanu": "^1.0.1",
     "tehanu-repo-coco": "^1.0.0",
     "tehanu-teru": "^1.0.0",
