fix: Replace yargs with a hand-written command-line parser
* Expect package name and version as parameters, not flags.
* Support -V and condensed flags.
* Hide the internal export getRegistry.

BREAKING CHANGE: Provide package name and version as parameters, not flags. Flags should work like they did before, although some unexpected difference might be caused by the replacement of yargs.

--- a/package.json
+++ b/package.json
@@ -69,8 +69,7 @@
     "rc": "^1.2.8",
     "request": "^2.37.0",
     "semver": "^7.3.7",
-    "treeify": "^1.1.0",
-    "yargs": "^17.5.1"
+    "treeify": "^1.1.0"
   },
   "c8": {
     "check-coverage": true,
